# betta-pipeline

./: .gitignore  README.md  environment_yolo.yml  pyproject.toml  requirements.txt  requirements_yolo.txt  verify_yolo_environment.py  week14_hyperparameter_sweep.ipynb
betta_pipeline/: _init_.py  cli.py  feature_generation.py  helper_functions_VA.py
betta_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
deliverables/: README.md
deliverables/configs/: README.md  aggregate__nh64_ly3_lg8_lr5e-04__all.yaml  aggregate__nh64_ly3_lg8_lr5e-04__train.yaml  fighting__nh64_ly3_lg8_lr5e-04__all.yaml  fighting__nh64_ly3_lg8_lr5e-04__train.yaml  hybrid__nh32_ly3_lg8_lr5e-04__all.yaml  hybrid__nh32_ly3_lg8_lr5e-04__train.yaml  ornamental__nh32_ly3_lg4_lr1e-04__all.yaml  ornamental__nh32_ly3_lg4_lr1e-04__train.yaml  wild__nh64_ly2_lg8_lr1e-04__all.yaml  wild__nh64_ly2_lg8_lr1e-04__train.yaml
deliverables/inference/: README.md  run_lightning_action_inference.py
deliverables/models/: README.md
deliverables/training/: README.md  common.py  train_aggregate_models.py  train_subtype_models.py
labels/: manual_scoring_3558_robot.csv
pipelines/yolo_classification/: README.md  run_yolo_classification.py
pipelines/yolo_detection_cropping/: README.md  median_gaussian.py
real_fish/: README.md
real_fish/configs/: README.md  aggregate__nh64_ly3_lg8_lr5e-04__all.yaml  aggregate__nh64_ly3_lg8_lr5e-04__train.yaml  (+8 more)
real_fish_pipeline/: README.md  cli.py
real_fish_preprocess/: README.md  cli.py  feature_generation.py  pose_predict.py  train.py
robot_fish/: README.md
(+12 files in other folders)
